--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 </nav>
             </div>
         </div>
-    <img class="main_img" src="./styles/image 1.png" alt="Galaxy Z Flip4">
-    <img class="galaxy_text"   src="./styles/Galaxy Z Flip4.png" alt="flip4">
-    <img class="arrow" src="./styles/arrow down.png" alt="arrow">
+        <div>
+            <img class="main_img" src="./styles/image 1.png" alt="Galaxy Z Flip4">
+            <h1 class="flip44">Galaxy Z Flip4</h1>
+            <!-- <img class="arrow" src="./styles/arrow down.png" alt="arrow"> -->
+        </div>
     </header>
-
-
     <section class="section_1 ">
         <div class="container">
             <div class="secOne">
@@ -42,12 +42,7 @@
             </div>
         </div>
     </section>
-
-
-
     <h1 class="container">The All New Galaxy</h1>
-
-
     <section class=" container">
         <div class="section_2">
             <div>
@@ -89,24 +84,27 @@
         </div>
     </section>
 </main>
+<hr>
 <footer class="container">
-    <div class="icons">
-        <img src="./styles/footer/Share.png" alt="share">
-        <img src="./styles/footer/fb.png" alt="facebook">
-        <img src="./styles/footer/tw.png" alt="twitter">
-        <img src="./styles/footer/in.png" alt="in">
-    </div>
-    <div>
-    <img src="./styles/samsung logo.png">
-    <p>ALL CONTENTS COPYRIGHT © SAMSUNG ELECTRONICS CO., LTD.</p>
-    </div>
-    <div>
-        <p>SAMSUNG.COM </p> |
-        <p> SAMSUNGMOBILEPRESS.COM</p> |
-        <p> SAMSUNG NEWSROOM</p>|
-        <p> SAMSUNG DEVELOPERS</p> |
-        <p> SAMSUNG DEVELOPERS</p> |
-    </div>
+    <div class="footer"> 
+        <div class="icons">
+            <img src="./styles/footer/Share.png" alt="share">
+            <img src="./styles/footer/fb.png" alt="facebook">
+            <img src="./styles/footer/tw.png" alt="twitter">
+            <img src="./styles/footer/in.png" alt="in">
+        </div>
+        <div class="samsung">
+        <img src="./styles/samsung logo.png">
+        <p>ALL CONTENTS COPYRIGHT © SAMSUNG ELECTRONICS CO., LTD.</p>
+        </div>
+        <div class="bot">
+            <p>SAMSUNG.COM </p>|
+            <p> SAMSUNGMOBILEPRESS.COM</p>|
+            <p> SAMSUNG NEWSROOM</p>|
+            <p> SAMSUNG DEVELOPERS</p>|
+            <p> SAMSUNG DEVELOPERS</p>|
+        </div>
+</div>
 
 </footer>
 </body>
